* Fix lightbox layout issues in IE by giving it a bit more vertical space.

--- a/nlw/share/sass/ckeditor/lightbox.sass
+++ b/nlw/share/sass/ckeditor/lightbox.sass
@@ -158,6 +158,12 @@ div.ui-dialog #lightbox .lightbox
 #st-widgets-moreoptions
   padding-left: 8px
 
+#widget-video.lightbox
+  table.st-widgets-optionstable td
+    white-space: nowrap
+    &.label
+      padding-right: 10px
+
 div.ui-dialog #lightbox .st-lightbox-content
   background-color: #fff
   color: #000
